--- a/movies-store/.eslintrc.json
+++ b/movies-store/.eslintrc.json
@@ -33,7 +33,13 @@
         "require-jsdoc": 0,
         "@typescript-eslint/ban-ts-comment": "off",
         "@typescript-eslint/ban-types": "off",
-        "prettier/prettier": "error",
+        // "prettier/prettier": "error",
+        "prettier/prettier": [
+            "warn",
+            {
+              "endOfLine": "auto"
+            }
+          ],
         "react/jsx-wrap-multilines": ["error", { "arrow": true, "return": true, "declaration": true }]
         // "unused-imports/no-unused-imports": "warn"
     }
