--- a/movies-store/package.json
+++ b/movies-store/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@mui/icons-material": "^5.2.5",
+    "@mui/lab": "^5.0.0-alpha.64",
     "@mui/material": "^5.2.7",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -20,6 +21,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-json": "^3.1.0",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
