--- a/movies-store/package.json
+++ b/movies-store/package.json
@@ -5,12 +5,6 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@fortawesome/fontawesome-common-types": "^0.3.0",
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.64",
     "@mui/material": "^5.2.7",
@@ -66,6 +60,7 @@
     "@testing-library/react": "^12.1.2",
     "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.2",
+    "@types/redux-mock-store": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "css-loader": "^6.5.1",
@@ -79,6 +74,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.5.1",
     "prettier-eslint": "^13.0.0",
+    "redux-mock-store": "^1.5.4",
     "sass": "^1.47.0",
     "sass-loader": "^12.4.0"
   },
