--- a/movies-store/package.json
+++ b/movies-store/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.11.18",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/testing-library__dom": "^7.5.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-json": "^3.1.0",
     "node-sass": "^7.0.1",
@@ -29,10 +30,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:frontend": "react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint --ext .ts,.tsx src --fix",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:backend": "npm start --prefix ./src/api",
+    "dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\""
   },
   "eslintConfig": {
     "extends": [
@@ -63,6 +67,7 @@
     "@types/redux-mock-store": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
+    "concurrently": "^7.0.0",
     "css-loader": "^6.5.1",
     "eslint": "^8.6.0",
     "eslint-config-google": "^0.14.0",
